# charge_transfer_integral

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac  run_cmake.bat
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: MYDIMER.47  dimer.fch  dimer.fchk  dimer.molden  dimer.out  dimer_Fock_Gaussian.txt  monomer1.fch  monomer1.fchk  monomer1.molden  monomer2.fch  monomer2.fchk  monomer2.molden
gau_semi-empirical/: CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
gau_semi-empirical/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gau_semi-empirical/examples/: dimer.out  monomer1.out  monomer2.out
gau_semi-empirical/src/: .gitignore  Makefile  Makefile.Linux  Makefile.Windows  calc_coupling_gau_semi_empirical_use_out.f90
src/: .gitignore  Makefile  Makefile.Linux  basic_reader.f90  calc_coupling.f90  calc_coupling.f95  calculator_basic.f90  coupling.f90  coupling_module.f90  main.f90  matrix_reader.f90
